add "suggest edit" and DOI

--- a/_layouts/database.html
+++ b/_layouts/database.html
@@ -25,17 +25,20 @@ layout: default
     {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date: "%B %d, %Y" }}">{% endif %}
 
     <div class="page__inner-wrap">
-      {% unless page.header.overlay_color or page.header.overlay_image %}
-        <header>
-          {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          {% if page.excerpt %}
-          <p class="page__excerpt">{{ page.excerpt }}</p>
-          {% endif %}
-          {% if page.read_time %}
-            <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
-          {% endif %}
-        </header>
-      {% endunless %}
+
+      <div class="edit">
+        <a href="https://github.com/QUALINET/databases/edit/master/{{ page.path }}" target="_blank">Suggest an edit</a>
+      </div>
+
+      <header>
+        {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
+        {% if page.excerpt %}
+        <p class="page__excerpt">{{ page.excerpt }}</p>
+        {% endif %}
+        {% if page.read_time %}
+          <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
+        {% endif %}
+      </header>
 
       <footer class="page__meta">
         {% if page.author %}
@@ -68,6 +71,12 @@ layout: default
           <p class="page__date"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: "%B %d, %Y" }}</time></p>
         {% elsif page.date %}
           <p class="page__date"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></p>
+        {% endif %}
+
+        {% if page.doi %}
+          <p class="page__meta__misc">
+            <b><i class="fas fa-fw fa-link" aria-hidden="true"></i> DOI:</b> <a href=" https://doi.org/{{ page.doi }}" target="_blank">{{ page.doi }}</a>
+          </p>
         {% endif %}
 
         {% if page.subjective_scores %}
@@ -134,7 +143,7 @@ layout: default
             </div>
           {% else %}
             <p class="page__link">
-            <a href="{{ page.external_link }}" class="btn btn--info"><i class="fas fa-fw fa-globe" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].ext_link_label | default: "Website" }}</a>
+            <a href="{{ page.external_link }}" class="btn btn--info" target="_blank"><i class="fas fa-fw fa-globe" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].ext_link_label | default: "Website" }}</a>
             </p>
           {% endif %}
         {% endif %}
