--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -86,3 +86,8 @@ p.page__excerpt {
     font-size: $type-size-4;
     margin-bottom: 10px;
 }
+
+.edit {
+  text-align: right;
+  margin-bottom: 10px;
+}
