add edit button

--- a/_layouts/database.html
+++ b/_layouts/database.html
@@ -27,7 +27,7 @@ layout: default
     <div class="page__inner-wrap">
 
       <div class="edit">
-        <a href="https://github.com/QUALINET/databases/edit/master/{{ page.path }}" target="_blank">Suggest an edit</a>
+        <a href="https://github.com/QUALINET/databases/edit/master/{{ page.path }}" target="_blank">📝 Suggest an edit</a>
       </div>
 
       <header>
