--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -31,7 +31,8 @@ layout: archive
       <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
         <h2 class="archive__subtitle">{{ category[0] }}</h2>
         <div class="entries-{{ page.entries_layout | default: 'list' }}">
-          {% for post in category.last reversed %}
+          {% assign sorted_posts = category.last | sort: 'title' %}
+          {% for post in sorted_posts %}
             {% include archive-single.html type=page.entries_layout %}
           {% endfor %}
         </div>
